RESOLVED FIXED29527
[GTK] WebKitHitTestResult is completely broken in gmail
https://bugs.webkit.org/show_bug.cgi?id=29527
Summary [GTK] WebKitHitTestResult is completely broken in gmail
Xan Lopez
Reported 2009-09-20 01:36:35 PDT
It fails to figure out whether you are over a link, over an editable area, etc.
Attachments
hittestfix.diff (2.17 KB, patch)
2009-09-22 00:47 PDT, Xan Lopez
jmalonzo: review+
xan.lopez: commit-queue-
Xan Lopez
Comment 1 2009-09-22 00:47:14 PDT
Created attachment 39907 [details] hittestfix.diff
Jan Alonzo
Comment 2 2009-09-22 03:42:11 PDT
No test?
Xan Lopez
Comment 3 2009-09-22 03:53:27 PDT
(In reply to comment #2) > No test? See https://bugs.webkit.org/show_bug.cgi?id=27546#c9 I'm trying to see how to figure out things from the JSC APIs.
Jan Alonzo
Comment 4 2009-09-22 04:21:03 PDT
Comment on attachment 39907 [details] hittestfix.diff (In reply to comment #3) > (In reply to comment #2) > > No test? > > See https://bugs.webkit.org/show_bug.cgi?id=27546#c9 I'm trying to see how to > figure out things from the JSC APIs. Ok. r=me.
Xan Lopez
Comment 5 2009-09-22 05:13:19 PDT
Thanks! Committed in r48626
Note You need to log in before you can comment on or make changes to this bug.