2009-09-22  Xan Lopez  <xlopez@igalia.com>

Reviewed by Jan Alonzo.

        [GTK] WebKitHitTestResult is completely broken in gmail
        https://bugs.webkit.org/show_bug.cgi?id=29527

        We need to use the main or focused frame when doing the coordinate
        transformation instead of always using the main frame.

        * webkit/webkitwebview.cpp:
        (webkit_web_view_get_hit_test_result):

Canonical link: https://commits.webkit.org/40189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48626 268f45cc-cd09-0410-ab3c-d52691b4dbfc